# zap

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SCF.py  SECURITY.md  casci.py  casci_c2v.py  exc.py  fci.py  fock.txt  fun.py  out_r1_r2.txt  pyproject.toml  qchem_active_space.py  qsceom.py  qsceom_c2v.py  qsceom_exact.py  requirements.txt  run_exact.py  symm.py  uccsd_exact.py  vqe.py  vqe_c2v.py  vqee.py  vqeex.py  ze.py
.github/: CODEOWNERS  pull_request_template.md
.github/CH+/: qscex_ene  qscex_labels.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
Hmatrix_CH+/: qHMatrix(CH+1.5re_full_operator).txt  qHMatrix(CH+1.5re_trotterized).txt  qHMatrix(CH+2re_full_operator).txt  qHMatrix(CH+2re_trotterized).txt  qHMatrix(CH+re_full_operator).txt  qHMatrix(CH+re_trotterized).txt
Outputs/H4_exact/: out_r1_r2_exact.txt  run_H4ex.py  t1_t2_exact.txt
Outputs/H4_trotterized/: out_r1_r2.txt  two_elec.txt
example/BH/: run_BH1.5re.py  run_BH2re.py  run_BHex1.5re.py  run_BHex2re.py  run_BHexre.py  run_BHre.py
example/CH+/: energy_gap_2_1Delta.txt  generate_r_vectors_only.py  run_CH+.py  run_CH+1.5re.py  run_CH+2re.py  run_CH+_c2v.py  run_CH+ex.py  run_CH+ex1.5re.py  run_CH+ex2re.py  run_CH+exre.py  run_CH+re.py  run_ch+ test.py
example/CH-/: run_CH-.py
example/CH2/: run_CH+.py  run_CH2.py
example/H2/: run_H2.py  run_H2ex.py
example/H4/: run_H4.py  run_H4ex.py
example/H8/: run_H8.py
example/HF/: run_1HF.py  run_1HFex.py  run_HF.py  run_HF0.793.py  run_HF0.793ex.py  run_HF1.69.py  (+3 more)
(+390 files in other folders)
