[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exact-uccsd-qsceom"
version = "0.1.0"
description = "Exact UCCSD VQE and QSC-EOM workflow using PennyLane and PySCF."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Contributors" }
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pennylane>=0.35",
  "pennylane-lightning>=0.35",
  "pyscf>=2.3",
]

[project.scripts]
run-exact = "run_exact:main"

[tool.setuptools]
py-modules = ["run_exact", "vqeex", "qsceom", "SCF", "exc", "fun"]

